--- a/package.json
+++ b/package.json
@@ -25,10 +25,16 @@
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "2.10.1",
+    "react-native-snackbar": "^2.4.0",
+    "react-native-snackbar-component": "^1.1.12",
     "react-native-svg": "^12.1.1",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-navigation": "^4.4.4",
+    "react-svg": "^14.1.15",
+    "rn-country-dropdown-picker": "^2.1.8",
+    "rn-snackbar-component": "^0.0.5",
     "use-force-update": "^1.0.7",
     "yup": "^0.32.11"
   },
